--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  doSomething()
  function doSomething()
  {
- alert("Function in Third script Block");
+ alert("Function in Third script Block1");
  }
  </script>
  </body>
